# melosz

./: .ghcid  .gitignore  README  README.md  melosz.cabal  package.json  start-test.sh  start.sh  stop-test.sh  stop.sh
app/: API.hs  Account.hs  Actions.hs  Auth.hs  Colour.hs  Compare.hs  Conclave.hs  Confidant.hs  Console.hs  ConsoleMain.hs  Home.hs  Main.hs  Marshal.hs  Megusta.hs  Planck.hs  Preference.hs  Ranking.hs  Rating.hs  Redis.hs  Scheduler.hs  Templates.hs  Types.hs  WebMain.hs
backend/: .ghcid  melosz.cabal
backend/api/: Actions.hs  Auth.hs  Main.hs  Redis.hs  Runner.hs
backend/app/: API.hs  Console.hs  Web.hs
backend/src/: AppState.hs  Glicko2.hs  Marshal.hs  Preference.hs  Ranking.hs  Rating.hs  Scheduler.hs  Types.hs
backend/test/: AppStateSpec.hs  MarshalSpec.hs  PreferenceSpec.hs  RankingSpec.hs  RatingSpec.hs  SchedulerSpec.hs  TestArbs.hs  TestUtils.hs  TypesSpec.hs
demo/: Web.hs
frontend/: ComparisonView.ts  LoginPage.ts  RankingsView.ts  RegisterPage.ts  StatusView.ts  api.ts  app.ts  index.html  mount.ts  package.json  serve.ts  server.ts  tsconfig.json
src/: AppState.hs  Console.hs  Glicko2.hs  Marshal.hs  Preference.hs  Ranking.hs  Rating.hs  Scheduler.hs  Types.hs  Web.hs
styles/: input.css  output.css  tailwind.config.js
test/: AppStateSpec.hs  MarshalSpec.hs  PreferenceSpec.hs  RankingSpec.hs  RatingSpec.hs  SchedulerSpec.hs  Spec.hs  TestArbs.hs  TestUtils.hs  TypesSpec.hs
