cabal-version:  3.0
name:           melosz
version:        0.1.0.0
license:        MIT
license-file:   README.md
author:         coriocactus
build-type:     Simple

common common-warnings
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wpartial-fields 
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-home-modules
    -Wredundant-constraints

common common-options
  default-language: GHC2024
  build-depends:
    base ^>=4.20.0.0,
    bytestring,
    containers,
    mtl,
    random

common web-deps
  build-depends:
    blaze-html,
    blaze-markup,
    http-api-data,
    http-types,
    servant-blaze,
    servant-server,
    text,
    wai,
    warp

library
  import: common-options, common-warnings, web-deps
  hs-source-dirs: src
  exposed-modules:
    Types AppState
    Rating Preference Scheduler Marshal Ranking
    Console Web

executable web
  import: common-options, common-warnings, web-deps
  ghc-options: -O2 -rtsopts -threaded -with-rtsopts=-N
  build-depends: melosz
  hs-source-dirs: app
  main-is: WebMain.hs

executable console
  import: common-options, common-warnings
  ghc-options: -O2 -rtsopts -threaded -with-rtsopts=-N
  build-depends: melosz
  hs-source-dirs: app
  main-is: ConsoleMain.hs

test-suite core
  import: common-options, common-warnings
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  type: exitcode-stdio-1.0
  build-depends: melosz, hspec, QuickCheck
  build-tool-depends: hspec-discover:hspec-discover
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules:
    TestArbs, TestUtils,
    TypesSpec, AppStateSpec,
    RatingSpec, PreferenceSpec, SchedulerSpec, MarshalSpec, RankingSpec
