cabal-version:  3.0
name:           melosz
version:        0.1.0.0
build-type:     Simple

common common-warnings
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wpartial-fields
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-home-modules
    -Wredundant-constraints

common common-options
  default-language: GHC2024
  build-depends:
    base ^>=4.21.0.0,
    aeson,
    bytestring,
    containers,
    http-api-data,
    mtl,
    random,
    text

common backing
  build-depends:
    SHA,
    base64,
    hedis,
    resource-pool,
    time,
    utf8-string,
    uuid,
    uuid-types

common web
  build-depends:
    blaze-html,
    blaze-markup,
    http-types,
    servant-blaze,
    servant-server,
    wai,
    wai-extra,
    warp

library
  import: common-options, common-warnings
  hs-source-dirs: src
  exposed-modules:
    Types AppState Glicko2
    Rating Scheduler Ranking

executable app
  import: common-options, common-warnings, web, backing
  ghc-options: -O2 -rtsopts -threaded -with-rtsopts=-N
  build-depends: melosz
  hs-source-dirs: app
  main-is: Main.hs
  other-modules:
    Actions, Redis, Auth,
    Colour, Templates,
    Home, Account,
    Megusta, Planck, Confidant, Conclave

executable demo-web
  import: common-options, common-warnings, web
  ghc-options: -O2 -rtsopts -threaded -with-rtsopts=-N
  build-depends: melosz
  hs-source-dirs: demo
  main-is: Web.hs

executable demo-console
  import: common-options, common-warnings
  ghc-options: -O2 -rtsopts -threaded -with-rtsopts=-N
  build-depends: melosz
  hs-source-dirs: demo
  main-is: Console.hs

test-suite core
  import: common-options, common-warnings
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  type: exitcode-stdio-1.0
  build-depends: melosz, hspec, QuickCheck
  build-tool-depends: hspec-discover:hspec-discover
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules:
    TestArbs, TestUtils,
    TypesSpec, AppStateSpec,
    RatingSpec, SchedulerSpec, RankingSpec
