cabal-version:  3.0
name:           melosz
version:        0.1.0.0
build-type:     Simple

common common-warnings
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wpartial-fields 
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-home-modules
    -Wredundant-constraints

common common-options
  default-language: GHC2024
  build-depends:
    base ^>=4.20.0.0,
    aeson,
    bytestring,
    containers,
    http-api-data,
    mtl,
    random,
    text

common api-deps
  build-depends:
    SHA,
    base64,
    servant-server,
    time,
    utf8-string,
    wai,
    wai-cors,
    wai-extra,
    warp

common web-deps
  build-depends:
    blaze-html,
    blaze-markup,
    http-types,
    servant-blaze,
    servant-server,
    wai,
    warp

library
  import: common-options, common-warnings
  hs-source-dirs: src
  exposed-modules:
    Types AppState
    Rating Preference Scheduler Marshal Ranking

executable api
  import: common-options, common-warnings, api-deps
  ghc-options: -O2 -rtsopts -threaded -with-rtsopts=-N
  build-depends: melosz
  hs-source-dirs: app
  main-is: API.hs

executable web
  import: common-options, common-warnings, web-deps
  ghc-options: -O2 -rtsopts -threaded -with-rtsopts=-N
  build-depends: melosz
  hs-source-dirs: app
  main-is: Web.hs

executable console
  import: common-options, common-warnings
  ghc-options: -O2 -rtsopts -threaded -with-rtsopts=-N
  build-depends: melosz
  hs-source-dirs: app
  main-is: Console.hs

test-suite core
  import: common-options, common-warnings
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  type: exitcode-stdio-1.0
  build-depends: melosz, hspec, QuickCheck
  build-tool-depends: hspec-discover:hspec-discover
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules:
    TestArbs, TestUtils,
    TypesSpec, AppStateSpec,
    RatingSpec, PreferenceSpec, SchedulerSpec, MarshalSpec, RankingSpec
